[package]
authors = ["Lee Olayvar <http://leeo.la>"]
name = "hob"
version = "0.0.1"

[[bin]]
name = "hob-server"
path = "src/main.rs"

[[bin]]
name = "hob"
path = "src/bin/hob.rs"

[dependencies]
clap = "2.15.0"
iron = "0.4.0"
log = "0.3.6"
mount = "0.2.1"
persistent = "0.2.1"
router = "0.4.0"

[dev-dependencies]
stainless = "0.1.8"
